--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.104.1
-uvicorn==0.24.0
+fastapi>=0.115.5
+starlette>=0.40.0
+uvicorn[standard]>=0.30.0
 pytest==7.4.0
 coverage==7.2.2
-httpx==0.25.1
