--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-fastapi>=0.115.5
-starlette>=0.40.0
-uvicorn[standard]>=0.30.0
+fastapi==0.115.6
+starlette==0.40.0
+uvicorn[standard]==0.31.1
+h11==0.16.0
 pytest==7.4.0
 coverage==7.2.2
-httpx==0.24.1
+httpx==0.27.2
+
