--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -10,54 +10,54 @@ env:
   IMAGE_NAME: demo-app
 
 jobs:
-  test_and_analyze:
-    name: Unit Tests + SonarCloud
-    runs-on: ubuntu-latest
+  # test_and_analyze:
+  #   name: Unit Tests + SonarCloud
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
+  #     - name: Set up Python
+  #       uses: actions/setup-python@v4
+  #       with:
+  #         python-version: "3.11"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install coverage pytest
+  #     - name: Install dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         pip install -r requirements.txt
+  #         pip install coverage pytest
 
-      - name: Run unit tests with coverage
-        run: |
-          coverage run -m pytest
-          coverage xml -o coverage.xml
+  #     - name: Run unit tests with coverage
+  #       run: |
+  #         coverage run -m pytest
+  #         coverage xml -o coverage.xml
 
-      - name: Set up JDK (required by SonarCloud)
-        uses: actions/setup-java@v4
-        with:
-          java-version: "17"
-          distribution: "temurin"
+  #     - name: Set up JDK (required by SonarCloud)
+  #       uses: actions/setup-java@v4
+  #       with:
+  #         java-version: "17"
+  #         distribution: "temurin"
 
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v3
-        env:
-          # organization: ${{ secrets.SONAR_ORG }}
-          # projectKey: ${{ secrets.SONAR_PROJECT_KEY }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  #     - name: SonarCloud Scan
+  #       uses: SonarSource/sonarcloud-github-action@v3
+  #       env:
+      #     # organization: ${{ secrets.SONAR_ORG }}
+      #     # projectKey: ${{ secrets.SONAR_PROJECT_KEY }}
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      # - name: SonarCloud Quality Gate
-      #   uses: SonarSource/sonarcloud-quality-gate-action@v1
-      #   with:
-      #     organization: ${{ secrets.SONAR_ORG }}
-      #     projectKey: ${{ secrets.SONAR_PROJECT_KEY }}
-      #     token: ${{ secrets.SONAR_TOKEN }}
+      # # - name: SonarCloud Quality Gate
+      # #   uses: SonarSource/sonarcloud-quality-gate-action@v1
+      # #   with:
+      # #     organization: ${{ secrets.SONAR_ORG }}
+      # #     projectKey: ${{ secrets.SONAR_PROJECT_KEY }}
+      # #     token: ${{ secrets.SONAR_TOKEN }}
 
   build_scan_push:
     name: Build, Scan & Push Docker Image
     runs-on: ubuntu-latest
-    needs: test_and_analyze
+    # needs: test_and_analyze
 
     steps:
       - name: Checkout code
