--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 fastapi==0.115.6
-starlette==0.49.1
+starlette==0.41.3        # FastAPI-compatible AND secure
 uvicorn[standard]==0.31.1
+httpx==0.27.2
 h11==0.16.0
 pytest==7.4.0
 coverage==7.2.2
-httpx==0.27.2
-
